--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,11 @@
   <%= render 'layouts/header'%>
   <%= render 'layouts/navigate'%>
   <div class="container">
+    <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %>">
+      <%= message %>
+      </div> 
+    <% end %>
     <%= yield %>
   </div>
   <%# <%= render 'layouts/footer'%> 
